created 'updateOne' functions in ORM and model. also added objToString function in ORM to transform devoured object into string for sql query. added PUT route in controller for when user clicks button to devour burger. created javascript file for client side and added click listener for 'devour it' button. created partial view with handlebars that is responsible for rendering each burger list item and button.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,13 +2,13 @@
 
 <div class="container">
     <div class="row">
-        
+
     {{!-- Column for uneaten burgers --}}
     <div class="col">
         <ul>
             {{#each burgers}}
                 {{#unless devoured}}
-                    <li>{{burger_name}}</li>
+                    {{> burgers/burger-item devoured=true}}
                 {{/unless}}
             {{/each}}
         </ul>
@@ -19,7 +19,7 @@
         <ul>
             {{#each burgers}}
                 {{#if devoured}}
-                    <li>{{burger_name}}</li>
+                    {{> burgers/burger-item devoured=false}}
                 {{/if}}
             {{/each}}
         </ul>
@@ -27,6 +27,7 @@
     </div>
 </div>
 
+{{!-- Form to add new burger --}}
 <h2>Order a Burger!</h2>
 
 <form action=""></form>
