--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+    <script src="./assets/js/client_burger.js"></script>
     <title>Welcome to Good Burger!</title>
 </head>
 <body>
