--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,22 @@
     </div>
 </div>
 
-{{!-- Form to add new burger --}}
-<h2>Order a Burger!</h2>
+<div class="container mt-5">
 
-<form action=""></form>
+<h2 class="text-center mb-3">Order a Burger!</h2>
+
+<div class="row justify-content-center">
+    
+    <div class="col-4">
+    {{!-- Form to add new burger --}}
+    <form class="create-form">
+        <div class="form-group">
+            <label for="add-burger">Type of Burger:</label>
+            <textarea class="form-control rounded-5 mb-2" id="add-burger" rows="3"></textarea>
+            <button type="submit">Order Burger</button>
+        </div>
+    </form>
+    </div>
+</div>
+
+</div>
