--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,8 +18,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Limelight&display=swap" rel="stylesheet">
     <script src="./assets/js/client_burger.js"></script>
-    <title>Welcome to Good Burger!</title>
+    <link rel="stylesheet" href="./assets/css/burger_style.css">
+    <title>Welcome to the MVC Diner!</title>
 </head>
 <body>
     {{{ body }}}
