--- a/views/partials/burgers/burger-item.handlebars
+++ b/views/partials/burgers/burger-item.handlebars
@@ -2,7 +2,7 @@
     {{burger_name}}
 
     {{#if devoured}}
-        <button class="eat-burger" data-id="{{id}}" data-eatenstate="{{devoured}}">
+        <button class="eat-burger btn btn-cyan btn-sm" data-id="{{id}}" data-eatenstate="{{devoured}}">
             Devour it!
         </button>
     {{/if}}
